--- a/ArchivosBlog/BorradorDAW/index.html
+++ b/ArchivosBlog/BorradorDAW/index.html
@@ -71,6 +71,8 @@
   <p>Of course you can, we won't stop you.</p>
 </details>
 
+<details>
+
   <summary>
 	Artículo 8. Prospectiva del título en el sector o sectores.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -79,6 +81,7 @@
   <p>Of course you can, we won't stop you.</p>
 </details>
 
+<details>
   <summary>
 	Artículo 9. Objetivos generales.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -86,7 +89,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Sistemas Informáticos.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -94,7 +97,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Bases de datos.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -102,7 +105,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Programación.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -110,7 +113,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Lenguajes de marcas y sistemas de gestión de información.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -118,7 +121,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Entornos de Desarrollo.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -126,7 +129,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Desarrollo web en entorno cliente.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -134,7 +137,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Desarrollo web en entorno servidor.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -142,7 +145,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Despliegue de aplicaciones web.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
@@ -150,7 +153,7 @@
   </summary>
   <p>Of course you can, we won't stop you.</p>
 </details>
-
+<details>
   <summary>
 	Módulo Profesional: Diseño de interfaces web.
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
