Añadida pagina modificaciones DAM

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>SMR</title>
+		<title>Apuntes de SMR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -332,6 +332,7 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
+								<li><a href="https://davidlms.com" class="icon brands style2 fa-creative-commons-by"><span class="label">Blog personal</span></a></li>
 								<li><a href="https://twitter.com/LMS_David_RS" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://github.com/DavidLMS" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
 								<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
