Añadido enlace al blog

--- a/ArchivosBlog/BorradorDAW2021/index.html
+++ b/ArchivosBlog/BorradorDAW2021/index.html
@@ -3070,7 +3070,7 @@ Las líneas de actuación en el proceso de enseñanza-aprendizaje que permiten a
 dispositivos.</ins></span></pre></div></div></div></div></div>
 </details>
 
-<footer>Sitio web creado por <a href="https://davidlms.com">David Romero</a> a partir de la plantilla diseñada por <a href="https://codepen.io/frogmcw/pen/deqRwa">Monica Wheeler</a> y utilizando la herramienta <a href="https://github.com/adamarthurryan/dubdiff">dubdiff</a> de <a href="https://github.com/adamarthurryan">Adam Brown</a>. <br>Puedes conocer los motivos y los detalles técnicos en el blog</footer>
+<footer>Sitio web creado por <a href="https://davidlms.com">David Romero</a> a partir de la plantilla diseñada por <a href="https://codepen.io/frogmcw/pen/deqRwa">Monica Wheeler</a> y utilizando la herramienta <a href="https://github.com/adamarthurryan/dubdiff">dubdiff</a> de <a href="https://github.com/adamarthurryan">Adam Brown</a>. <br>Puedes conocer los motivos y los detalles técnicos en <a href="https://davidlms.com/article/la-transparencia-de-los-nuevos-daw-y-dam/">el blog</a></footer>
 <!-- partial -->
   <script  src="./script.js"></script>
 
