--- a/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
+++ b/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
@@ -476,7 +476,7 @@ Endpoint = 83.59.218.164:51820
   <script src="https://storage.googleapis.com/codelab-elements/native-shim.js"></script>
   <script src="https://storage.googleapis.com/codelab-elements/custom-elements.min.js"></script>
   <script src="https://storage.googleapis.com/codelab-elements/prettify.js"></script>
-  <script src="https://storage.googleapis.com/codelab-elements/codelab-elements.js"></script>
+  <script src="/js/codelab-elements.js"></script>
   <script src="//support.google.com/inapp/api.js"></script>
 
 </body>
