--- a/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
+++ b/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
@@ -25,7 +25,7 @@
                   id="wireguard-ubuntu-server-20"
                   title="WireGuard en Ubuntu Server 20.04"
                   environment="web"
-                  feedback-link="">
+                  feedback-link="https://github.com/DavidLMS/davidlms.github.io/issues/new?title=Error+en+gu%c3%ada+Wireguard+en+Ubuntu+Server">
     
       <google-codelab-step label="Introducción" duration="1">
         <p>En esta guía práctica vamos a ver paso a paso cómo podemos configurar una red VPN con WireGuard en un servidor con Ubuntu Server 20.04. También veremos cómo podemos conectar a ese servidor VPN un cliente móvil y otro cliente de escritorio a través de la red pública, de forma que simulen ser teletrabajadores haciendo uso de los recursos de la red privada de la empresa en la que se encuentra el servidor VPN. Concretamente, el esquema propuesto durante esta guía es el siguiente:</p>
