--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Servicios en Red</h2>
-							<p>En el siguiente enlace puedes encontrar algunos apuntes del módulo para trabajar con el alumnado. Están bajo una licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/es/">CC BY-SA</a>, por lo que eres libre de modificarlos y volver a publicarlos..</p>
+							<p>En el siguiente enlace puedes encontrar algunos apuntes del módulo para trabajar con el alumnado. Están bajo una licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/es/">CC BY-SA</a>, por lo que eres libre de modificarlos y volver a publicarlos.</p>
 							<ul class="actions stacked">
 								<li><a href="serviciosenred/apuntes.html" class="button">Acceder</a></li>
 							</ul>
