--- a/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
+++ b/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://storage.googleapis.com/codelab-elements/codelab-elements.css">
+  <script defer data-domain="davidlms.github.io" src="https://plausible.io/js/plausible.js"></script>
   <style>
     .success {
       color: #1e8e3e;
