--- a/redeslocales/apuntes.html
+++ b/redeslocales/apuntes.html
@@ -10434,7 +10434,7 @@ margin:0 auto;
 <div created="20210804151119971" modified="20210804151119971" title="$:/state/tree/$:/tags/">
 <pre>show</pre>
 </div>
-<div created="20210804151313496" list="$:/AdvancedSearch $:/core/templates/tiddlywiki5.html [[01. Sobre el contenido]] [[Tabla de contenidos]] [[Itinerario recomendado para estudiantes]] [[Contenidos asociados a Resultados de Aprendizaje]]" modified="20210804151559823" title="$:/StoryList">
+<div list="[[01. Sobre el contenido]] [[Tabla de contenidos]] [[Itinerario recomendado para estudiantes]] [[Contenidos asociados a Resultados de Aprendizaje]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20191013064639654" list="$:/core/ui/MoreSideBar/All $:/core/ui/MoreSideBar/Recent $:/core/ui/MoreSideBar/Tags $:/core/ui/MoreSideBar/Missing $:/core/ui/MoreSideBar/Drafts $:/core/ui/MoreSideBar/Orphans $:/core/ui/MoreSideBar/Types $:/core/ui/MoreSideBar/System $:/core/ui/MoreSideBar/Shadows $:/core/ui/MoreSideBar/Explorer $:/core/ui/MoreSideBar/Plugins" modified="20191013064639654" title="$:/tags/MoreSideBar">
@@ -14012,11 +14012,11 @@ select {
 <div created="20191012073421708" modified="20191013065119310" title="$:/view">
 <pre>classic</pre>
 </div>
-<div author="David Romero" created="20190907220243618" modified="20200430121836283" tags="[[Tabla de contenidos]]" title="01. Sobre el contenido">
+<div author="David Romero" created="20190907220243618" modified="20210804152503954" tags="[[Tabla de contenidos]]" title="01. Sobre el contenido">
 <pre>Bienvenidos a estos apuntes en permanente construcción, espero que te ayuden en tu camino hacia el aprendizaje del funcionamiento de las Redes Locales.
 
 Eres libre de descargar tu propia versión de esta página, personalizarla a tu gusto y volver a publicarla, solo debes tener en cuenta la licencia:
-[[David Romero BY-SA|https://creativecommons.org/licenses/by-sa/3.0/es/]], manteniendo el enlace original a [[https://davidlms.github.io/|https://davidlms.github.io/]]</pre>
+[[David Romero BY-NC|https://creativecommons.org/licenses/by-nc/3.0/es/]], manteniendo el enlace original a [[https://davidlms.github.io/|https://davidlms.github.io/]]</pre>
 </div>
 <div author="David Romero" created="20191012070507719" modified="20200430121844072" tags="[[Tabla de contenidos]]" title="02. ¿Qué es una red local?">
 <pre></pre>
