--- a/serviciosenred/apuntes.html
+++ b/serviciosenred/apuntes.html
@@ -12828,11 +12828,11 @@ En construcción
 
 En construcción</pre>
 </div>
-<div author="David Romero" created="20190907220243618" modified="20210804152527894" tags="[[Tabla de contenidos]]" title="1. Sobre el contenido">
+<div author="David Romero" created="20190907220243618" modified="20210804153006064" tags="[[Tabla de contenidos]]" title="1. Sobre el contenido">
 <pre>Bienvenidos a estos apuntes en permanente construcción, espero que te ayuden en tu camino hacia el aprendizaje del funcionamiento de los Servicios en Red.
 
 Eres libre de descargar tu propia versión de esta página, personalizarla a tu gusto y volver a publicarla, solo debes tener en cuenta la licencia:
-[[David Romero BY-NC|https://creativecommons.org/licenses/by-nc/3.0/es/]], manteniendo el enlace original a [[https://davidlms.github.io/|https://davidlms.github.io/]]
+[[David Romero BY-NC|https://creativecommons.org/licenses/by-nc/4.0/]], manteniendo el enlace original a [[https://davidlms.github.io/|https://davidlms.github.io/]]
 </pre>
 </div>
 <div author="David Romero" created="20190917173439302" modified="20191013114921230" tags="[[Tabla de contenidos]]" title="2. Acceso remoto">
