--- a/Presentaciones-HTML/DI/ud1.html
+++ b/Presentaciones-HTML/DI/ud1.html
@@ -699,7 +699,7 @@ section.right {
 text-align: right;
 }
 ;">
-<h1>Herramientas de desarrollo de interfaces</h1>
+<h1>Herramientas visuales de desarrollo</h1>
 <ul>
 <li><a href="https://visualstudio.microsoft.com/es/">Visual Studio</a></li>
 <li><a href="https://www.monodevelop.com">Mono Develop</a></li>
