--- a/Presentaciones-HTML/DI/ud2-practica.html
+++ b/Presentaciones-HTML/DI/ud2-practica.html
@@ -507,17 +507,56 @@ section.right {
 text-align: right;
 }
 ;">
-<h1>Componentes: Item Views</h1>
+<h1>Ventanas de diálogo</h1>
 <ul>
-<li><strong>List View/Widget</strong></li>
-<li><strong>Tree View/Widget</strong></li>
-<li><strong>Table View/Widget</strong></li>
-<li><strong>Column View</strong></li>
-<li><strong>Undo View</strong></li>
-<li>Enlace de componentes a orígenes de datos.</li>
+<li>Las ventanas de diálogo parten de la clase <strong>QDialog</strong>.</li>
+<li>En Qt Designer pueden crearse, pero no enlazarse a otro Widget o ventana principal.</li>
+<li>Los diálogos pueden ser modales (bloquean la ventana padre) o no modales.</li>
+<li><strong>QDialogButtonBox</strong> es un conjunto de botones especiales típicos de una ventana de diálogo.</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="25" data-theme="gaia" data-style="footer {
+  text-align: right;
+}
+section.right {
+text-align: right;
+}
+" style="--theme:gaia;--style:footer {
+  text-align: right;
+}
+section.right {
+text-align: right;
+}
+;">
+<h1>Componentes: Item Views and Widgets</h1>
+<ul>
+<li>Normalmente, los Item Views se asocian a modelos de datos (archivos externos, bases de datos), mientras que los Item Widgets se asocian a datos que se añaden habitualmente en la misma lógica de la aplicación.</li>
+<li>Los Item Views son más eficientes que los Item Widgets. La diferencia es más notable, obviamente, cuando hay grandes cantidades de datos.</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="26" data-theme="gaia" data-style="footer {
+  text-align: right;
+}
+section.right {
+text-align: right;
+}
+" style="--theme:gaia;--style:footer {
+  text-align: right;
+}
+section.right {
+text-align: right;
+}
+;">
+<h1>Componentes: Item Views and Widgets</h1>
+<ul>
+<li><strong>List View/Widget</strong>: Muestra lista de elementos sin jerarquía.</li>
+<li><strong>Tree View/Widget</strong>: Muestra lista de elementos con jerarquía.</li>
+<li><strong>Table View/Widget</strong>: Muestra elementos en forma de tabla.</li>
+<li><strong>Column View</strong>: Muestra listas en cascada. Son Lists Views dependendientes de la elección en la columna anterior.</li>
+<li><strong>Undo View</strong>: Muestra un List View con las últimas acciones realizadas en forma de pila.</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="27" data-theme="gaia" data-style="footer {
   text-align: right;
 }
 section.right {
