--- a/Presentaciones-HTML/DI/ud2-practica.html
+++ b/Presentaciones-HTML/DI/ud2-practica.html
@@ -490,7 +490,7 @@ text-align: right;
 <h1>Menú y barra de herramientas</h1>
 <ul>
 <li>Pasamos a <a href="https://doc.qt.io/archives/qt-4.8/designer-creating-mainwindows.html"><strong>QMainWindow</strong></a>: Un QWidget preparado por Qt para tener las características propias de una ventana principal: barra de estado, barra de herramientas con <a href="https://doc.qt.io/qt-5/qtwidgets-widgets-icons-example.html">iconos</a>, menú...</li>
-<li>Un <strong>QAction</strong> permite definir múltiples interfaces para un mismo componente. Es lo ideal cuando queremos una acción que pueda desde el menú, la barra de herramientas o a través de una combinación de teclas.</li>
+<li>Un <strong>QAction</strong> permite definir múltiples interfaces para un mismo componente. Es lo ideal cuando queremos una acción que pueda ejecutarse desde el menú, la barra de herramientas o a través de una combinación de teclas.</li>
 <li>En Qt Designer, al abrir un QMainWindow, permite añadir opciones al menú. Con click derecho podemos añadir una barra de herramientas, que podemos rellenar con el editor de acciones.</li>
 </ul>
 </section>
